--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<head th:include="include/header::html" ></head>
 <head>
-    <meta charset="UTF-8">
-    <title>Portfolio</title>
+    <title>Citi Finance</title>
+    <link rel="stylesheet" type="text/css" href="/css/index.css">
+    <script src="/js/index/index.js" type="text/javascript"></script>
+
 </head>
 <body>
-<h1>
-    show portfolio
-    includes bonds, stocks, futures, ETFs.
-</h1>
+<div id="headDiv">
+    <h1>花旗金融信息服务有限公司</h1>
+</div>
+
+<div id="workingAreaDiv">
+    <table class="table table-striped">
+            <thead>
+            <tr class="success">
+                <th>Id</th>
+                <th>Price</th>
+                <th>High</th>
+                <th>Low</th>
+                <th>Open</th>
+                <th>Close</th>
+                <th>Changed</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr v-for="bean in beans">
+                <td>{{bean.instrumentId}}</td>
+                <td>{{bean.price}}</td>
+                <td>{{bean.high}}</td>
+                <td>{{bean.low}}</td>
+                <td>{{bean.open}}</td>
+                <td>{{bean.close}}</td>
+                <td>{{bean.changed}}</td>
+            </tr>
+            </tbody>
+    </table>
+</div>
 </body>
+
+
 </html>
