--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -1,10 +1,58 @@
-<!DOCTYPE html>
-<html lang="en">
+﻿<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>LOGIN PAGE</title>
+<title>Citi Portfolio</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+ 
+<link href="css/login.css" rel="stylesheet" type="text/css" media="all" />
+
 </head>
 <body>
-    Register to fund Manager
+
+	<!-- main -->
+	<div class="main-w3layouts wrapper">
+		<div class="main-agileinfo">
+			<div class="agileits-top"> 
+				<form action="#" method="post"> 
+					<input class="text" type="text" name="Username" placeholder="姓名" required="">
+					<input class="text" type="password" name="password" placeholder="密码" required="">
+					<div class="wthree-text"> 
+						<ul> 
+							<li>
+								<label class="anim">
+									<input type="checkbox" class="checkbox" required="">
+									<span> 记住 ?</span> 
+								</label> 
+							</li>
+							<li><a href="#">忘记密码 ?</a> </li>
+						</ul>
+						<div class="clear"> </div>
+					</div>   
+					<input type="submit" value="登录">
+				</form>
+				<p>创建一个账号? <a href="#"> 立即登录!</a></p>
+			</div>	 
+		</div>	
+		<!-- copyright -->
+		<div class="w3copyright-agile">
+			<p>Citi Portfolio  <a href="http://cyz.ink" title="Citi Portfolio"></a></p>
+		</div>
+		<!-- //copyright -->
+		<ul class="w3lsg-bubbles">
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+	</div>	
+	<!-- //main --> 
+	
 </body>
 </html>
