--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -9,7 +9,11 @@
 
 </head>
 <body>
-
+<ol class="breadcrumb" style="float: left">
+	<li><a href="/index">主页</a></li>
+	<li><a href="/admin">管理员</a></li>
+	<li class="active">登录</li>
+</ol>
 	<!-- main -->
 	<div class="main-w3layouts wrapper">
 		<div class="main-agileinfo">
