--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -1,13 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<head th:include="include/header::html" ></head>
 <head>
-    <meta charset="UTF-8">
-    <title>Portfolio Admin</title>
+    <title>Citi Finance</title>
+    <link rel="stylesheet" type="text/css" href="/css/admin.css">
+    <script src="/js/admin/admin.js" type="text/javascript"></script>
+
 </head>
 <body>
-<h1>
-    PORTFOLOIO Admin
-    include update prices,etc.
-</h1>
+<div id="headDiv">
+
+    <ol class="breadcrumb">
+        <li><a href="/index">主页</a> </li>
+        <li><a class="active">管理员</a></li>
+        <li><a href="/login">登录</a></li>
+    </ol>
+
+    <h1>花旗金融信息服务有限公司</h1>
+</div>
+
+<div id="workingAreaDiv">
+    <table class="table table-striped table-hover table-condensed">
+            <thead>
+            <tr class="success">
+                <th @click="sortBy('id')">
+                    <a href="#" class="columnName">id</a>
+                </th>
+                <th @click="sortBy('name')">
+                    <a href="#" class="columnName">price</a>
+                </th>
+                <th @click="sortBy('password')">
+                    <a href="#" class="columnName">high</a>
+                </th>
+                <th @click="sortBy('balance')">
+                    <a href="#" class="columnName">low</a>
+                </th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr v-for="bean in beans">
+                <td>{{bean.id}}</td>
+                <td>{{bean.name}}</td>
+                <td>{{bean.password}}</td>
+                <td>{{bean.balance}}</td>
+            </tr>
+            </tbody>
+    </table>
+</div>
 </body>
+
+
 </html>
