--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -9,24 +9,53 @@
 </head>
 <body>
 <div id="headDiv">
+
+    <ol class="breadcrumb">
+        <li class="active">主页</li>
+        <li><a href="/admin">管理员</a></li>
+        <li><a href="/login">登录</a></li>
+    </ol>
+
     <h1>花旗金融信息服务有限公司</h1>
 </div>
 
 <div id="workingAreaDiv">
-    <table class="table table-striped">
+    <table class="table table-striped table-hover table-condensed">
             <thead>
             <tr class="success">
-                <th>Id</th>
-                <th>Price</th>
-                <th>High</th>
-                <th>Low</th>
-                <th>Open</th>
-                <th>Close</th>
-                <th>Changed</th>
+                <th>
+                    add
+                </th>
+                <th @click="sortBy('id')">
+                    <a href="#" class="columnName">id</a>
+                </th>
+                <th @click="sortBy('price')">
+                    <a href="#" class="columnName">price</a>
+                </th>
+                <th @click="sortBy('high')">
+                    <a href="#" class="columnName">high</a>
+                </th>
+                <th @click="sortBy('low')">
+                    <a href="#" class="columnName">low</a>
+                </th>
+                <th @click="sortBy('open')">
+                    <a href="#" class="columnName">open</a>
+                </th>
+                <th @click="sortBy('close')">
+                    <a href="#" class="columnName">close</a>
+                </th>
+                <th @click="sortBy('changed')">
+                    <a href="#" class="columnName">changed</a>
+                </th>
             </tr>
             </thead>
             <tbody>
             <tr v-for="bean in beans">
+                <td>
+                    <label >
+                        <input type="checkbox" name="idcheck" >
+                    </label>
+                </td>
                 <td>{{bean.instrumentId}}</td>
                 <td>{{bean.price}}</td>
                 <td>{{bean.high}}</td>
