--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -1,14 +1,11 @@
 *{margin:0;padding:0;}
 body {
-    font-family:Verdana;
-'Text Me One', sans-serif;
-    /*#00bdf2,#00b3f0 18%,#0066b3 77%,#004985);*/
     background: #00bdf2;
     background: -webkit-linear-gradient(to bottom right, #00bdf2,#00b3f0 18%,#0066b3 77%,#004985);
     background: linear-gradient(to bottom right, #00bdf2,#00b3f0 18%,#0066b3 77%,#004985);
     background-size:cover;
     background-attachment: fixed;
-    text-align: center;
+    /*text-align: center;*/
 }
 #headDiv{
     height:100px;
@@ -21,15 +18,6 @@ body {
     background-color: white;
     font-size: 12px;
 }
-.breadcrumb{
-    float: left;
-}
 a:hover{
     text-decoration: none;
-}
-.breadcrumb > li + li:before {
-    color: #CCCCCC;
-    content: "/ ";
-    padding: 0 5px;
-    display:inline-block;
 }
