--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -11,6 +11,14 @@
 
 
 <div id="workingAreaDiv">
+
+    <ul class="nav nav-tabs">
+        <li role="presentation" class="active"><a href="/getCurrentPriceBy/Stocks">Stocks</a></li>
+        <li role="presentation"><a href="/getCurrentPriceBy/Bonds">Bonds</a></li>
+        <li role="presentation"><a href="/getCurrentPriceBy/ETFs">ETFs</a></li>
+        <li role="presentation"><a href="/getCurrentPriceBy/Futures">Futures</a></li>
+    </ul>
+
     <table class="table table-striped table-hover table-condensed">
             <thead>
             <tr style="background-color: #a6e1ec">
