--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -1,37 +1,31 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<head th:include="include/header::html"></head>
 <head>
 <title>Citi Portfolio</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="css/login.css" rel="stylesheet" type="text/css" media="all" />
+	<script src="/js/login/login.js" type="text/javascript"></script>
+
 
 </head>
 <body>
+
+
 <!-- main -->
-	<div class="main-w3layouts wrapper">
-		<div class="main-agileinfo">
-			<div class="agileits-top"> 
-				<form action="#" method="post"> 
-					<input class="text" type="text" name="Username" placeholder="姓名" required="">
-					<input class="text" type="password" name="password" placeholder="密码" required="">
-					<div class="wthree-text"> 
-						<ul> 
-							<li>
-								<label class="anim">
-									<input type="checkbox" class="checkbox" required="">
-									<span> 记住 ?</span> 
-								</label> 
-							</li>
-							<li><a href="#">忘记密码 ?</a> </li>
-						</ul>
-						<div class="clear"> </div>
-					</div>   
-					<input type="submit" value="登录">
-				</form>
-				<p>创建一个账号? <a href="#"> 立即登录!</a></p>
-			</div>	 
-		</div>	
+<div class="main-w3layouts wrapper" id="workingAreaDiv">
+
+	<div class="main-agileinfo">
+		<div class="agileits-top">
+			<input v-model="username" class="text" type="text" name="Username" placeholder="Username" required="">
+			<input v-model="password" class="text" type="password" name="password" placeholder="Password"
+				   required="">
+			<input @click="loginIn()" type="submit" value="Login In">
+			<p style="font-size: 12px;">Don't have a Account? <a href="#" style="font-size: 20px;">Sign up</a></p>
+		</div>
+
+	</div>
 		<!-- copyright -->
 		<div class="w3copyright-agile">
 			<p>Citi Portfolio  <a href="http://cyz.ink" title="Citi Portfolio"></a></p>
