--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -13,10 +13,14 @@
 <div id="workingAreaDiv">
 
     <ul class="nav nav-tabs">
-        <li role="presentation" class="active"><a href="/getCurrentPriceBy/Stocks">Stocks</a></li>
-        <li role="presentation"><a href="/getCurrentPriceBy/Bonds">Bonds</a></li>
-        <li role="presentation"><a href="/getCurrentPriceBy/ETFs">ETFs</a></li>
-        <li role="presentation"><a href="/getCurrentPriceBy/Futures">Futures</a></li>
+        <li role="presentation" :class="{'active':type=='Bonds'}" @click="changeInstrument('Bonds')"><a
+                href="/#">Bonds</a></li>
+        <li role="presentation" :class="{'active':type=='Stocks'}" @click="changeInstrument('Stocks')"><a href="/#">Stocks</a>
+        </li>
+        <li role="presentation" :class="{'active':type=='Futures'}" @click="changeInstrument('Futures')"><a href="/#">Futures</a>
+        </li>
+        <li role="presentation" :class="{'active':type=='ETFs'}" @click="changeInstrument('ETFs')"><a href="/#">ETFs</a>
+        </li>
     </ul>
 
     <table class="table table-striped table-hover table-condensed">
