完成导航条“下一页”功能

--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -83,6 +83,9 @@
             </tr>
             </tbody>
     </table>
+    <button @click="addInstrumentPageStart()">
+        下一页
+    </button>
 </div>
 </body>
 
