--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -23,7 +23,7 @@
         </li>
     </ul>
 
-    <table class="table table-striped table-hover table-condensed">
+    <table class="table table-striped table-condensed">
             <thead>
             <tr style="background-color: #a6e1ec">
                 <th>
