--- a/src/main/resources/templates/include/header.html
+++ b/src/main/resources/templates/include/header.html
@@ -25,7 +25,7 @@
                 Hi,Welcome to CSTC
                 <a href="#">Sign in</a>
             </span>
-                <a href="#">My Portfolio</a>
+                <a href="#">My Portfolio<span class="badge">4</span></a>
                 <a href="#"></a>
                 <span class="glyphicon glyphicon-shoppong-cart DeepBlueColor">
                     Balance  <strong>$0</strong>
