--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -11,23 +11,40 @@
 
 
 <div id="workingAreaDiv">
+    <div class="container-fluid">
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+            <li role="presentation" :class="{'active':type=='Bonds'}" @click="changeInstrument('Bonds')"><a
+                    href="/#">Bonds</a></li>
+            <li role="presentation" :class="{'active':type=='Stocks'}" @click="changeInstrument('Stocks')"><a href="/#">Stocks</a>
+            </li>
+            <li role="presentation" :class="{'active':type=='Futures'}" @click="changeInstrument('Futures')"><a href="/#">Futures</a>
+            </li>
+            <li role="presentation" :class="{'active':type=='ETFs'}" @click="changeInstrument('ETFs')"><a href="/#">ETFs</a>
+            </li>
+        </ul>
+        <form class="navbar-form navbar-left">
+            <div class="form-group">
+                <input type="text" class="form-control" placeholder="Search">
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+        </form>
 
-    <ul class="nav nav-tabs">
-        <li role="presentation" :class="{'active':type=='Bonds'}" @click="changeInstrument('Bonds')"><a
-                href="/#">Bonds</a></li>
-        <li role="presentation" :class="{'active':type=='Stocks'}" @click="changeInstrument('Stocks')"><a href="/#">Stocks</a>
-        </li>
-        <li role="presentation" :class="{'active':type=='Futures'}" @click="changeInstrument('Futures')"><a href="/#">Futures</a>
-        </li>
-        <li role="presentation" :class="{'active':type=='ETFs'}" @click="changeInstrument('ETFs')"><a href="/#">ETFs</a>
-        </li>
-    </ul>
-
-    <table class="table table-striped table-hover table-condensed">
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">{{totalPrice}}</a></li>
+            <li><a href="#"  @click="select()">add to portfolio</a></li>
+        </ul>
+    </div>
+    </div>
+    <div class="text-uppercase text-bold">id selected: {{selected}}</div>
+    <table class="table table-striped table-hover table-condensed" id="table1">
             <thead>
             <tr style="background-color: #a6e1ec">
                 <th>
-                    add
+<!--                    <label class="form-checkbox">-->
+<!--                        <input type="checkbox" v-model="selectAll" @click="select()">-->
+                        <i class="form-icon"></i>
+<!--                    </label>-->
                 </th>
                 <th @click="sortBy('id')">
                     <a href="#" class="columnName">id
@@ -64,13 +81,16 @@
                         <span class="glyphicon glyphicon-resize-vertical"/>
                     </a>
                 </th>
+                <th>
+                    operation
+                </th>
             </tr>
             </thead>
             <tbody>
-            <tr v-for="bean in beans">
+            <tr v-for="(bean,index) in beans" :key="bean.index">
                 <td>
-                    <label >
-                        <input type="checkbox" name="idcheck" >
+                    <label>
+                        <input type="checkbox" name="idcheck" :value="bean" v-model="selected" @click="select()">
                     </label>
                 </td>
                 <td>{{bean.instrumentId}}</td>
@@ -80,12 +100,21 @@
                 <td>{{bean.open}}</td>
                 <td>{{bean.close}}</td>
                 <td>{{bean.changed}}</td>
+                <td>
+                    <button type="button" class="btn btn-default" @click="sortUp(bean)">up</button>
+                    <button type="button" class="btn btn-default" @click="sortDown(bean)">down</button>
+                </td>
             </tr>
             </tbody>
     </table>
+
+    <button @click="decreaseInstrumentPageStart()">
+        上一页
+    </button>
     <button @click="addInstrumentPageStart()">
         下一页
     </button>
+
 </div>
 </body>
 
