用户购买,出售,价格更新时进行profit计算 admin界面可显示用户的获利情况

--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -18,3 +18,22 @@ a:hover{
 tbody {
     background-color: #5bc0de;
 }
+
+#selectInstrumentTypeDiv {
+    text-align: center;
+    margin: 20px auto;
+}
+
+#selectInstrumentTypeDiv input {
+    display: inline-block;
+    height: 30px;
+    width: 400px;
+
+}
+
+#selectInstrumentTypeDiv select {
+    width: 10%;
+    margin: 10px auto;
+    display: inline-block;
+}
+
