--- a/src/main/resources/templates/index/myInstruments.html
+++ b/src/main/resources/templates/index/myInstruments.html
@@ -13,11 +13,17 @@
 
     <!--portfolio数据-->
     <div id="HoldDiv">
+        <ul class="nav nav-tabs ">
+            <li @click="changePortfolioPage('-1')"><a>上一页</a></li>
+            <li><a>{{portfolioStart+1}}</a></li>
+            <li @click="changePortfolioPage('1')"><a>下一页</a></li>
+        </ul>
+
         <table class="table">
             <thead>
             <tr>
                 <th>id</th>
-                <th>instrumentId</th>
+                <th>instrument</th>
                 <th>volume</th>
                 <th>Sell</th>
             </tr>
@@ -25,11 +31,12 @@
             <tbody>
             <tr v-for="(bean,index) in portfolioBeans">
                 <td>{{bean.id}}</td>
-                <td>{{bean.instrumentId}}</td>
+                <td>{{bean.instrument.symbol}}</td>
                 <td>{{bean.volume}}</td>
-                <td>
-                    <input min="0" type="number" style="width: 30px" v-model="numberOfInstrumentToSell">
-                    <button :disabled="numberOfInstrumentToSell<1" @click="sellPortfolio(bean.instrumentId)">sell
+                <td style="color: black">
+                    <input min="1" type="number" style="width: 60px" v-model="numberOfInstrumentToSell">
+                    <button class="button  button-primary button-glow button-tiny button-pill button-jumbo"
+                            :disabled="numberOfInstrumentToSell<1" @click="sellPortfolio(bean.instrumentId)">sell
                     </button>
                 </td>
             </tr>
